# jyske-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SYSTEM_PROMPT.md  alembic.ini  app.py  callback.html  pyproject.toml  requirements-dev.txt  requirements.txt  research_server.py  server.py  setup_consent.py
cron/: evals.py  scheduler.py  sync.py  tips.py
docker/langfuse/: .env.example  docker-compose.yml
docs/: privacy.md  terms.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: sw.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/components/: AgentDataAudit.vue  AgentModelSettings.vue  ApiKeysSettings.vue  AppHeader.vue  BankConnection.vue  BudgetCard.vue  BudgetForm.vue  BurgerMenu.vue  CardHalo.vue  DateDivider.vue  GrainEdge.vue  InputBar.vue  MessageBubble.vue  PinScreen.vue  SessionSummaryCard.vue  SettingsPanel.vue  TipCard.vue  TypingIndicator.vue
frontend/src/components/dashboard/: BudgetsWidget.vue  GoalCard.vue  GoalsWidget.vue  ProgressBar.vue  TipWidget.vue
frontend/src/dashboard/: widgets.js
frontend/src/lib/: markdown.js
frontend/src/router/: index.js
frontend/src/stores/: agents.js  auth.js  budgets.js  chat.js  goals.js  tip.js  ui.js
frontend/src/views/: ChatView.vue  DashboardView.vue
lib/: auth.py  categorizer.py  config.py  consent.py  curated_models.json  llm.py  models.py  research_graph.py  storage.py
migrations/: env.py
migrations/versions/: 1f8ee01fda9a_add_onboarding_table.py  2408de69fc02_add_agent_id_to_budgets_and_summaries.py  64bed3498587_initial_schema.py  784418892304_add_math_aggregation_tools.py  968eeaea94c3_enable_wal_journal_mode.py  a3f153be37cc_add_tips_table.py  a8f633b0783b_add_provider_keys_and_agents_tables.py  aa1665106662_add_goals_table.py
scripts/: benchmark_sync_writes.py  dedupe_transactions.py  setup_consent.py
src/jyske_mcp/: auth.py  categorizer.py  config.py  consent.py  llm.py  model_catalog.py  scheduler_client.py  storage.py
src/jyske_mcp/jobs/: evals.py  scheduler.py  sync.py  tips.py
src/jyske_mcp/kernel/: auth.py  categorizer.py  config.py  consent.py  dto.py  llm.py  model_catalog.py  storage.py  sync.py
src/jyske_mcp/kernel/data/: categories.json
src/jyske_mcp/mcp/: server.py
src/jyske_mcp/prompts/: system_prompt.md
src/jyske_mcp/slices/finance/: api.py  dto.py  evals.py  prompt.md  recurring.py  registry.py  routes.py  spending.py  storage.py  tips.py  tools.py
src/jyske_mcp/web/: app.py
static/: manifest.json  sw.js
templates/: index.html
tests/: conftest.py  test_auth_login_lockout.py  test_budget_and_goal_endpoints.py  test_budget_crud_routes.py  test_budget_status_mid_level.py  test_categorize_transaction_validation.py  test_categorizer_validation.py  test_chat_tool_dispatch.py  test_classify_recurring.py  test_compare_spending_proration.py  test_config_security.py  test_consent_flow.py  test_direction_null_undercount_bug.py  test_goal_pace.py  test_mcp_aggregation_golden_master.py  test_mixed_currency_no_blend.py  test_scheduler_auth.py  test_segment_price_runs.py  test_storage_synthetic_id.py  test_sum_spending.py  test_sync_pagination.py
tests/jobs/: test_scheduler_auth.py  test_sync_batch_categorize_validation.py  test_sync_dedup_and_categorization.py  test_sync_freshness.py  test_sync_pagination.py  test_sync_single_owner.py  test_sync_timeout.py
tools/research_mcp/: graph.py  schema.py  server.py
