# Packaging only — runtime dependencies stay in requirements.txt for now.
# The package is meant to be installed editable (pip install -e ., or
# `make install`): jyske_mcp.kernel.config.ROOT_DIR resolves to the repo
# checkout, where alembic.ini, static/, and .env live.

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jyske-mcp"
version = "0.1.0"
description = "Personal finance companion — FastAPI PWA backend + MCP server over Enable Banking data"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jyske_mcp = ["kernel/data/*.json", "prompts/*.md"]

[tool.importlinter]
root_package = "jyske_mcp"

[[tool.importlinter.contracts]]
name = "Kernel imports nothing upward"
type = "forbidden"
source_modules = ["jyske_mcp.kernel"]
forbidden_modules = ["jyske_mcp.slices", "jyske_mcp.platform"]

[[tool.importlinter.contracts]]
name = "Slices must not import each other"
type = "independence"
modules = ["jyske_mcp.slices.*"]

[[tool.importlinter.contracts]]
name = "platform -> slices -> kernel layering"
type = "layers"
layers = ["platform", "slices", "kernel"]
containers = ["jyske_mcp"]

# mypy — strict scoped to seam modules only. jyske_mcp.storage was physically
# split at deliverable #6 (KernelStorage -> kernel/storage.py, FinanceStorage
# -> slices/finance/storage.py) — see
# .agent/epics/vsa-restructure-blueprint.md §5. Deliberately NOT global
# strict + per-module opt-out: the baseline stays lenient everywhere else
# until #10.
[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "jyske_mcp.kernel.dto",
    "jyske_mcp.kernel.storage",
    "jyske_mcp.slices.finance.dto",
    "jyske_mcp.slices.finance.storage",
]
strict = true
