# Packaging only — runtime dependencies stay in requirements.txt for now.
# The package is meant to be installed editable (pip install -e ., or
# `make install`): jyske_mcp.kernel.config.ROOT_DIR resolves to the repo
# checkout, where alembic.ini, static/, and .env live.

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jyske-mcp"
version = "0.1.0"
description = "Personal finance companion — FastAPI PWA backend + MCP server over Enable Banking data"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jyske_mcp = ["kernel/data/*.json", "slices/finance/*.md"]

[tool.importlinter]
root_package = "jyske_mcp"

[[tool.importlinter.contracts]]
name = "Kernel imports nothing upward"
type = "forbidden"
source_modules = ["jyske_mcp.kernel"]
forbidden_modules = ["jyske_mcp.slices", "jyske_mcp.platform"]

[[tool.importlinter.contracts]]
name = "Slices must not import each other"
type = "independence"
modules = ["jyske_mcp.slices.*"]

[[tool.importlinter.contracts]]
name = "platform -> slices -> kernel layering"
type = "layers"
layers = ["platform", "slices", "kernel"]
containers = ["jyske_mcp"]

# 4th contract, activated at deliverable #7b (blueprint §5): jyske_mcp.web
# (platform, until the platform/ package reorg at #10) may only reach the
# finance slice through its public api.py — never its internals. Enumerated
# so a new internal module is a deliberate add to this list, not a silent
# gap. allow_indirect_imports=true restricts the check to DIRECT imports —
# api.py itself is expected (and allowed) to import these internals; what's
# forbidden is jyske_mcp.web reaching past api.py to import them itself.
[[tool.importlinter.contracts]]
name = "platform imports finance only via api"
type = "forbidden"
source_modules = ["jyske_mcp.web"]
forbidden_modules = [
    "jyske_mcp.slices.finance.storage",
    "jyske_mcp.slices.finance.dto",
    "jyske_mcp.slices.finance.tools",
    "jyske_mcp.slices.finance.recurring",
    "jyske_mcp.slices.finance.spending",
    "jyske_mcp.slices.finance.registry",
    "jyske_mcp.slices.finance.routes",
    "jyske_mcp.slices.finance.tips",
    "jyske_mcp.slices.finance.evals",
]
allow_indirect_imports = "true"

# mypy — strict scoped to seam modules only. jyske_mcp.storage was physically
# split at deliverable #6 (KernelStorage -> kernel/storage.py, FinanceStorage
# -> slices/finance/storage.py) — see
# .agent/epics/vsa-restructure-blueprint.md §5. Deliberately NOT global
# strict + per-module opt-out: the baseline stays lenient everywhere else
# until #10.
[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "jyske_mcp.kernel.dto",
    "jyske_mcp.kernel.storage",
    "jyske_mcp.slices.finance.dto",
    "jyske_mcp.slices.finance.storage",
]
strict = true
